atualização na responsividade

--- a/index.html
+++ b/index.html
@@ -121,13 +121,12 @@
                 
             </div>
         </section>
-
         <section class="projects" id="projects">
             <h2 class="heading">Projetos</h2>
             <div class="projects-box">
                 <div class="project-card">
-                    <a href="https://github.com/carlosgodspeed/App-Quimica" target="_blank">
-                    <img src="project1.png" alt="">
+                    <a href="https://github.com/carlosgodspeed/food" target="_blank">
+                    <img src="app-mobile-food.jpeg" alt="">
                     </a>
                     <h3>project 1</h3>
                     <p>Lorem ipsum is a placeholder text commonly used in publishing
@@ -137,7 +136,42 @@
                         real words will look like in the final</p>
                 </div>
                 <div class="project-card">
-                    <a href="https://github.com/carlosgodspeed/App-Quimica" target="_blank">
+                    <a href="https://github.com/carlosgodspeed/app-new" target="_blank">
+                    <img src="app-quimica.jpeg" alt="">
+                    </a>
+                    <h3>project 1</h3>
+                    <p>Lorem ipsum is a placeholder text commonly used in publishing
+                        and graphic design. It is used to demonstrate the visual form
+                        of a document or a typeface without relying on meaningful content. 
+                        It is essentially nonsense text that still gives an idea of what 
+                        real words will look like in the final</p>
+                </div>
+                <div class="project-card">
+                    <a href="https://github.com/carlosgodspeed/aluguel-app" target="_blank">
+                    <img src="aluguel-app.jpeg" alt="">
+                    </a>
+                    <h3></h3>
+                    <p>Lorem ipsum is a placeholder text commonly used in publishing
+                        and graphic design. It is used to demonstrate the visual form
+                        of a document or a typeface without relying on meaningful content. 
+                        It is essentially nonsense text that still gives an idea of what 
+                        real words will look like in the final</p>
+                </div>
+                <div class="project-card">
+                    <a href="https://github.com/carlosgodspeed/App_finance_Native" target="_blank">
+                    <img src="app-finance.jpeg" alt="">
+                    </a>
+                    <h3></h3>
+                    <p>Lorem ipsum is a placeholder text commonly used in publishing
+                        and graphic design. It is used to demonstrate the visual form
+                        of a document or a typeface without relying on meaningful content. 
+                        It is essentially nonsense text that still gives an idea of what 
+                        real words will look like in the final</p>
+                </div>
+            </div>
+            <div class="projects-box">
+                <div class="project-card">
+                    <a href="https://github.com/carlosgodspeed/food" target="_blank">
                     <img src="airlines.png" alt="">
                     </a>
                     <h3>project 1</h3>
@@ -148,8 +182,8 @@
                         real words will look like in the final</p>
                 </div>
                 <div class="project-card">
-                    <a href="https://github.com/carlosgodspeed/App-Quimica" target="_blank">
-                    <img src="project3.png" alt="">
+                    <a href="https://github.com/carlosgodspeed/food" target="_blank">
+                    <img src="airlines.png" alt="">
                     </a>
                     <h3>project 1</h3>
                     <p>Lorem ipsum is a placeholder text commonly used in publishing
@@ -158,7 +192,6 @@
                         It is essentially nonsense text that still gives an idea of what 
                         real words will look like in the final</p>
                 </div>
-                
             </div>
         </section>
 
@@ -167,12 +200,12 @@
             <form action="https://formsubmit.co/carlosminibics@gmail.com" method="POST" class="contact-form">
                 <div class="form-control">
                     <div class="form-inputs">
-                        <input type="text" class="input-field" placeholder="Namo Completo">
+                        <input type="text" class="input-field" placeholder="Nome Completo">
                         <input type="text" class="input-field" placeholder="Email">
                         <input type="hidden" name="_next" value="http://127.0.0.1:5500/#home"/>
                     </div>
                     <div class="text-area">
-                        <textarea placeholder="Menssagem"></textarea>
+                        <textarea placeholder="Mensagem"></textarea>
                     </div>
                     <div class="form-button">
                         <br>
