--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <nav class="navbar">
                 <a href="#home">Home</a>
-                <a href="#services">Services</a>
+                <a href="#services">Serviços</a>
                 <a href="#projects">Projetos</a>
                 <a href="#contact">Contato</a>
             </nav>
@@ -32,15 +32,16 @@
 
         <section class="home" id="home">
             <div class="home-content">
-                <h1>Hi, It's <span>Carlos</span></h1>
+                <h1>Olá eu sou <span>Carlos</span></h1>
                 <h3>
-                    I am <span>Developer</span>
+                    Sou um <span>Desenvolvedor</span>
                 </h3>
-                <p>Lorem ipsum is a placeholder text commonly used in publishing
-                    and graphic design. It is used to demonstrate the visual form
-                    of a document or a typeface without relying on meaningful content. 
-                    It is essentially nonsense text that still gives an idea of what 
-                    real words will look like in the final
+                <p> Sou Carlos, programador com experiência em desenvolvimento de aplicações web e mobile,
+                    utilizando tecnologias como JavaScript e React Native.
+                    Tenho foco em criar soluções funcionais, intuitivas e com boa performance,
+                    sempre buscando aprimorar minhas habilidades e acompanhar as inovações do setor.
+                    Comprometido com a qualidade do código e a experiência do usuário,
+                    estou em constante evolução para entregar projetos que gerem valor e impacto real.
                 </p>
 
                 <div class="social-icons">
@@ -58,7 +59,6 @@
                     </a>
                 </div>
                 <div class="btn-group">
-                    <a href="#hire" class="btn">Hire</a>
                     <a href="#contact" class="btn">Contato</a>
                 </div>
             </div>
@@ -75,11 +75,12 @@
                     <div class="service-info">
                         <i class="bx bxl-figma"></i>
                         <h4>UI / UX design</h4>
-                        <p>Lorem ipsum is a placeholder text commonly used in publishing
-                        and graphic design. It is used to demonstrate the visual form
-                        of a document or a typeface without relying on meaningful content. 
-                        It is essentially nonsense text that still gives an idea of what 
-                        real words will look like in the final</p>
+                        <p> Criação de interfaces modernas, funcionais e centradas no usuário.
+                            Desenvolvo experiências digitais que equilibram estética e usabilidade,
+                            garantindo que cada elemento da interface contribua para uma navegação fluida e intuitiva.
+                            Desde o wireframe até o protótipo final, meu foco está em transformar ideias em produtos
+                            que realmente atendam às necessidades dos usuários
+                            e ofereçam uma experiência envolvente e eficaz.</p>
                     </div>
                 </div>
 
@@ -87,11 +88,12 @@
                     <div class="service-info">
                         <i class="bx bx-code"></i>
                         <h4>Front-End Development</h4>
-                        <p>Lorem ipsum is a placeholder text commonly used in publishing
-                        and graphic design. It is used to demonstrate the visual form
-                        of a document or a typeface without relying on meaningful content. 
-                        It is essentially nonsense text that still gives an idea of what 
-                        real words will look like in the final</p>
+                        <p> Desenvolvo interfaces web modernas, responsivas e com alta performance,
+                            combinando boas práticas de design com código limpo e eficiente.
+                            Trabalho com HTML, CSS, JavaScript e frameworks como React e Next.js,
+                            além de ferramentas de estilização como Tailwind CSS, Sass e Styled Components.
+                            Tenho foco na criação de experiências intuitivas, acessíveis e visualmente consistentes,
+                            garantindo que o produto final seja funcional, escalável e alinhado às necessidades do usuário.</p>
                     </div>
                 </div>
 
@@ -99,11 +101,11 @@
                     <div class="service-info">
                         <i class="bx bx-mobile"></i>
                         <h4>Mobile Development</h4>
-                        <p>Lorem ipsum is a placeholder text commonly used in publishing
-                        and graphic design. It is used to demonstrate the visual form
-                        of a document or a typeface without relying on meaningful content. 
-                        It is essentially nonsense text that still gives an idea of what 
-                        real words will look like in the final</p>
+                        <p> Criação de aplicativos móveis multiplataforma com foco em performance, usabilidade e design nativo.
+                            Utilizo React Native para desenvolver soluções compatíveis com Android e iOS
+                            a partir de uma base de código unificada, otimizando o tempo de desenvolvimento sem abrir mão da qualidade.
+                            Busco entregar experiências fluidas, interfaces bem construídas e funcionalidades
+                            alinhadas às necessidades do usuário final.</p>
                     </div>
                 </div>
 
@@ -111,11 +113,12 @@
                     <div class="service-info">
                         <i class="bx bxl-firebase"></i>
                         <h4>Database</h4>
-                        <p>Lorem ipsum is a placeholder text commonly used in publishing
-                        and graphic design. It is used to demonstrate the visual form
-                        of a document or a typeface without relying on meaningful content. 
-                        It is essentially nonsense text that still gives an idea of what 
-                        real words will look like in the final</p>
+                        <p> Gerencio e integro bancos de dados escaláveis e seguros para soluções web e mobile.
+                            Com Firebase, implemento funcionalidades como autenticação, armazenamento em nuvem e banco de dados em tempo real,
+                            garantindo uma experiência dinâmica e eficiente para os usuários.
+                            Para projetos que exigem maior controle e customização, utilizo MySQL,
+                            implementando sistemas de gerenciamento de dados relacionais robustos e otimizados.
+                            Ambas as soluções são integradas de forma a garantir desempenho, escalabilidade e segurança.</p>
                     </div>
                 </div>
                 
@@ -183,7 +186,31 @@
                 </div>
                 <div class="project-card">
                     <a href="https://github.com/carlosgodspeed/food" target="_blank">
-                    <img src="airlines.png" alt="">
+                    <img src="finance.png" alt="">
+                    </a>
+                    <h3>project 1</h3>
+                    <p>Lorem ipsum is a placeholder text commonly used in publishing
+                        and graphic design. It is used to demonstrate the visual form
+                        of a document or a typeface without relying on meaningful content. 
+                        It is essentially nonsense text that still gives an idea of what 
+                        real words will look like in the final</p>
+                </div>
+            </div>
+            <div class="projects-box">
+                <div class="project-card">
+                    <a href="https://github.com/carlosgodspeed/food" target="_blank">
+                    <img src="vogue.png" alt="">
+                    </a>
+                    <h3>project 1</h3>
+                    <p>Lorem ipsum is a placeholder text commonly used in publishing
+                        and graphic design. It is used to demonstrate the visual form
+                        of a document or a typeface without relying on meaningful content. 
+                        It is essentially nonsense text that still gives an idea of what 
+                        real words will look like in the final</p>
+                </div>
+                <div class="project-card">
+                    <a href="https://github.com/carlosgodspeed/food" target="_blank">
+                    <img src="museu.png" alt="">
                     </a>
                     <h3>project 1</h3>
                     <p>Lorem ipsum is a placeholder text commonly used in publishing
